--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main">
     <div class="left-box">
-        <img src="images/image-product-desktop.jpg" alt="">
+        <img src="image-product-desktop.jpg" alt="">
     </div>
     <div class="right-box">
        <span>P E R F U M E</span>
